# Gimbal_Plugin

./: CMakeLists.txt  README.md  package.xml  tty_setting
config/: params.yaml
include/gimbal_plugin/: gimbal.hpp  gimbal_plugin.hpp  recorder.hpp
src/gimbal_plugin/: gimbal_plugin.cpp
