<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gimbal_plugin</name>
  <version>0.0.0</version>
  <description>
    gimbal com
  </description>
  <maintainer email="jisangyou@kaist.ac.kr">You Jisang</maintainer>
  <license>RAILAB License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>raisin_parameter</depend>
  <depend>raisin_plugin</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_uncrustify</test_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
